Remove usages of deprecated API with JDK9.