@@ -40,7 +40,7 @@ public class IntegerHelper {
         
         Integer[] ret = new Integer[ integers.length ];
         for ( int i=0 ; i < ret.length ; i++ ) {
-            ret[i] = new Integer(integers[i]);
+            ret[i] = Integer.valueOf(integers[i]);
         }
         return ret;
     }
